# quantum-lab3

./: README.md  main.py  pyproject.toml  setup.bat  setup.sh  state.py
tasks/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
